# fastapi-basic-template

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
app/: main.py
app/api/: router.py  system.py
app/api/v1/: router.py
app/api/v1/routes/: user.py
app/core/: config.py  deps.py  exceptions.py  logging.py  security.py
app/db/: session.py
app/exceptions/: handlers.py
app/models/: base.py  user.py
app/repositories/: base.py  user_repository.py
app/schemas/: base.py  user.py
app/services/: user_service.py
src/: main.py
src/core/: config.py  logging.py
src/exceptions/: handlers.py
src/schemas/: base.py
