[tool.poetry]
name = "fastapi-basic-template"
version = "0.1.0"
description = "Basic template for an project of FastAPI with Poetry"
authors = ["iath-dev <developer.iath@gmail.com>"]
readme = "README.md"
packages = [{include="src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.118.0"
uvicorn = {extras = ["standard"], version = "^0.37.0"}
pydantic-settings = "^2.11.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.13.2"
mypy = "^1.18.2"
pytest = "^8.4.2"
httpx = "^0.28.1"
isort = "^6.0.1"
pre-commit = "^4.3.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py311"

# Linting configuration
[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings  
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "N",   # pep8-naming
]

ignore = [
    "E501",  # line too long (handled by formatter)
    "C901",  # too complex
]

# Import sorting configuration
[tool.ruff.lint.isort]
known-first-party = ["app"]

# Per-file ignores
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"**/tests/*" = ["S101"]

# Formatting configuration
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"